--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
         </header>
         <div id="hero-section" class="hero-section">
             <div class="hero-content">
-            <h1>WebGIS Daerah Bahaya Banjir</h1>
+            <h1>WebGIS Daerah Bahaya Banjir Kota Surabaya</h1>
             <p>Halaman untuk Melakukan Eksplorasi Daerah Bahaya Banjir di Kota Surabaya</p>
             </div>
             </div>
